cambios en experiencia laboral

--- a/index.html
+++ b/index.html
@@ -118,13 +118,10 @@
       <div id="experiencia"><h3 class="fondoTexto"> <i class="fa-solid fa-briefcase"></i> EXPERIENCIA</h3></div>
 
       <div class="p-2">
-        <p class="fw-bold">Lorem ipsum dolor sit.</p>
+        <p class="fw-bold">desarrolladora web</p>
         <p>2020-2024</p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia
-          placeat quo aliquam magnam ex. Eum, officiis qui? Et ipsam in harum
-          labore facere, saepe suscipit a, impedit aspernatur quaerat
-          asperiores!
+          desarrolladora para Google
         </p>
       </div>
 
