cambio de color del Footer

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
     
 <!--Pie de página-->
-<footer class="text-center p-3 mt-5 m-0">
+<footer class="text-center p-3 mt-5 m-0" style="background-color: rgb(208, 22, 165);">
   <p>Daniela Catalán 2024. Curriculum y portafolio.</p>
 </footer>
 
